vlib/v/checker/tests/multi_const_field_name_duplicate_err.vv
const (aaa = 1)
const (aaa = 2)
fn main() {
	println(aaa)
}
